--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,15 @@
     <strong>We're sorry but vue-crud doesn't work properly without JavaScript enabled. Please enable it to
       continue.</strong>
   </noscript>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link" href="time">TimeLine</a>
+        <a class="nav-item nav-link" href="crud">CRUD</a>
+        <a class="nav-item nav-link" href="chart">Chart</a>
+      </div>
+    </div>
+  </nav>
   <div id="app"></div>
   <!-- built files will be auto injected -->
 </body>
